# zero2prod

./: .env  Cargo.toml  Dockerfile  \  configuration.yaml  o  spec.yaml
.sqlx/: query-51b61b9ad28c176ee234f6e4f9157a19f70320552c5593a0227d7e91c32e15dd.json  query-774c1b204b2732c27870a293422d36e93e11b1d43b5d6568069e97f27e201d96.json  query-957ad538b9f596bba30469567eb8a4dfe46924754fe48fc68f49ae61ec9f6472.json  query-ce79c03d301b2adff0b5c5520607b5d6230fdc28e46830fa6bc880546d849feb.json
configuration/: base.yaml  production.yaml
migrations/: 20250408114442_create_subscriptions_table.sql  20250422145725_make_status_not_null_in_subscriptions.sql  20250502172606_create_idempotency_table.sql  20250506164009_create_newsletter_issues_table.sql  20250506171540_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  (+1 more)
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
